--- a/_site.yml
+++ b/_site.yml
@@ -22,7 +22,7 @@ navbar:
     - icon: fa fa-twitter
       href: https://twitter.com/c_gebhard
     - icon: fa fa-rss
-      href: index.xml
+      href: blog.xml
 output:
   distill::distill_article:
     includes:
